<!--
  ~ Copyright 2024 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BLE Starter</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="location_permission_rationale">Starting from Android 6, the system requires apps to be granted location access in order to scan for BLE devices.\n\nYour location is never used aside from enabling the app to perform BLE scans.</string>
    <string name="bluetooth_permission_required">Nearby Devices Permission Required</string>
    <string name="bluetooth_permission_rationale">Starting from Android 12, the system requires apps to be granted Nearby Devices access in order to scan for and connect to BLE devices.</string>
    <string name="please_grant_relevant_permissions">Please grant required permissions</string>
    <string name="app_settings_rationale">Prior requests for required permissions have been repeatedly or permanently denied. You\'ll need to manually grant the app these permissions from the app\'s Settings screen.</string>
    <string name="cannot_launch_app_settings">Unable to launch app settings, please navigate to app settings manually</string>
    <string name="app_settings">App Settings</string>
    <string name="quit">Quit</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_or_unable_to_connect_to_device">Disconnected or unable to connect to %1$s.</string>
    <string name="ok">OK</string>

    <!-- Added for activity_main.xml -->
    <string name="navigation_title">GUIDE Beacons</string>
    <string name="toolbar_logo_desc">Team logo</string>
    <string name="subtitle_choose_action">Choose an action below</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_scan_cd">Start scanning for nearby beacons</string>
    <string name="view_map">View Map</string>
    <string name="view_map_cd">Open the indoor navigation map</string>
    <string name="record_signal">Record RSSI</string>
    <string name="record_signal_cd">Record beacon RSSI values</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_panel_cd">Open admin settings panel</string>
    <string name="scan_results">Scan Results</string>
    <string name="permissions_debug">Permissions Debug</string>
    <string name="permissions_debug_cd">Open debug permissions checker</string>

    <string name="bluetooth_permission_denied_permanently">You must enable bluetooth manually\n</string>
</resources>
